--- a/SarkariExamDetail/src/main/webapp/resources/css/style.css
+++ b/SarkariExamDetail/src/main/webapp/resources/css/style.css
@@ -1,16 +1,4 @@
-/*
-Theme Name: business5
-Theme URI: 
-Description: A business wordpress theme with a simple header with no background image.
-Version: 2.21
-Author: LeadCamp, Inc
-Author URI: http://www.leadcamp.com/content/free-wordpress-themes/
-Tags: three column,left right sidebar
-*/
 
-/* begin Page */
-
-/* Generated with http://www.leadcamp.com/content/free-wordpress-themes/ version 2.0.2.15338 */
 
 body
 {
@@ -263,7 +251,7 @@ div.Header
   position: relative;
   z-index:0;
   width: 1366px;
-  height: 72px;
+  height: 100px;
   font: bold 11px/1.5em Verdana;
 }
 
@@ -275,9 +263,9 @@ div.Header-jpeg
   top: 0;
   left: 0;
   width: 1370px;
-  height: 72px;
+  height: 100px;
   background-image: url('/SarkariExamDetail/resources/images/Header1.jpg');
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-position: center;
 }
 /* end Header */
@@ -287,7 +275,7 @@ div.Header-jpeg
 {
   display : block;
   position: absolute;
-  left: 60px;
+  left: 100px;
   top: 18px;
   width: 560px;
 }
@@ -771,7 +759,7 @@ h1.logo-name, h1.logo-name a, h1.logo-name a:link, h1.logo-name a:visited, h1.lo
 
 .BlockContent-body a:link
 {
-  color: #246689;
+  color: #0000ff;
   font-family: Arial, Helvetica, Sans-Serif;
 }
 
@@ -907,6 +895,8 @@ a img
   border-style: solid;
   border-width: 0px;
   padding:3px;
+  margin-left: 220px;
+  width: 898px;
 }
 
 
@@ -1025,6 +1015,7 @@ body
 {
   font-family: Arial, Helvetica, Sans-Serif;
   color: #525252;
+  margin-left: 220px;
 }
 
 /* Start Content link style */
